try to fix the background on ios part 2

--- a/public/resources/css/queries.css
+++ b/public/resources/css/queries.css
@@ -862,20 +862,8 @@
   ================= */
 
   /* navbar & greeting section */
-  section.greeting:before {
-    content: "";
-    display: block;
-    position: fixed;
-    left: 0;
-    top: 0;
-    width: 100%;
-    height: 100%;
-    z-index: -10;
-    background: url(photos/2452.jpg) no-repeat center center;
-    -webkit-background-size: cover;
-    -moz-background-size: cover;
-    -o-background-size: cover;
-    background-size: cover;
+  section.greeting {
+    background-attachment: initial;
   }
 
   ul.main-nav {
@@ -904,7 +892,7 @@
   }
 
   div.g-image img {
-    height: 210px;
+    height: 220px;
   }
 
   /* intro-div */
